--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   sqflite: 1.2.0
   path_provider: 1.5.1
+  provider: ^3.0.0
   #flutter_slidable: any
   #intl: any
   #image_picker: any
@@ -49,6 +50,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/db_schema/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
